--- a/partials/brackets.html
+++ b/partials/brackets.html
@@ -1,5 +1,5 @@
 <h1>2017 NCAA Tournament - East Bracket</h1>
-<main id="tournament">
+<main id="tournament" ng-controller="bracketsCtrl">
   <ul class="round round-1">
     <li class="spacer">&nbsp;</li>
 
