--- a/partials/leaderboard.html
+++ b/partials/leaderboard.html
@@ -1,11 +1,22 @@
-<div>
-  <h4>Leaders</h4>
-    <ul>
-      <li>User 1</li>
-      <li>User 2</li>
-      <li>User 3</li>
-      <li>User 4</li>
-      <li>User 5</li>
-      <li>User 6</li>
-    </ul>
-</div>
+<h3>Leaderboard</h3>
+<table class="highlight">
+        <thead>
+          <tr>
+              <th data-field="id">User Name</th>
+              <th data-field="price">Points</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>LaDonna</td>
+            <td>Tambo</td>
+            <td>Luke</td>
+          </tr>
+          <tr>
+            <td>23</td>
+            <td>21</td>
+            <td>20</td>
+          </tr>
+        </tbody>
+      </table>
