--- a/partials/brackets.html
+++ b/partials/brackets.html
@@ -1,3 +1,109 @@
+<h1>2017 NCAA Tournament - West Bracket</h1>
+<main id="tournament" ng-controller="bracketsCtrl">
+  <ul class="round round-1">
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">N. Carolina <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">FGCU/FDU <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">USC <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Providence <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top ">Indiana <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">Chattanooga <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Kentucky <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">New Mexico St <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Memphis <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">St Mary's <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Mich St <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Valparaiso <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Creighton <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Cincinnati <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Duke <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Albany <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+  </ul>
+  <ul class="round round-2">
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">N. Carolina <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Colo St <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Chattanooga <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Saint Louis <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top ">Memphis <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">Mich St <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top ">Creighton <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">Duke <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+  </ul>
+  <ul class="round round-3">
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">N. Carolina <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Chattanooga <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top ">Mich St <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">Duke <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+  </ul>
+  <ul class="round round-4">
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">N. Carolina <span>(score)</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Duke <span>(score)</span></li>
+
+    <li class="spacer">&nbsp;</li>
+  </ul>
+</main>
+
 <h1>2017 NCAA Tournament - East Bracket</h1>
 <main id="tournament" ng-controller="bracketsCtrl">
   <ul class="round round-1">
