--- a/partials/leaderboard.html
+++ b/partials/leaderboard.html
@@ -1,4 +1,5 @@
-<h3>Leaderboard</h3>
+<div>
+<h3>Cohorts Challenge Bracket</h3>
 <table class="striped">
     <thead>
       <tr>
@@ -15,6 +16,11 @@
         <td>Gonzaga</td>
       </tr>
       <tr>
+        <td>Terrill</td>
+        <td>22</td>
+        <td>Kentucky</td>
+      </tr>
+      <tr>
         <td>Tambo</td>
         <td>21</td>
         <td>Minnesota</td>
@@ -26,3 +32,6 @@
       </tr>
     </tbody>
 </table>
+</div>
+
+<span></span>
